--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@shadcn/ui": "^0.0.4",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -10,6 +11,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
